color: Make transfer function estimation robust to clamping

Transfer function tables encountered in the wild will often have the
property that they are a clamped parametric function.

In this particular bug, the parametric transfer function, when evaluted
at 1, is much greater than 1. The table clamps this value to 1. The
approximation code doesn't do any of this clamping, and so it ends up
with an inaccurate approximation.

Add a test with the data from the user-provided ICC profile.

Bug: 750459
Change-Id: I520201d1610f50f5fbe0839116f405c07b10daf9
Reviewed-on: https://chromium-review.googlesource.com/602594
Commit-Queue: ccameron chromium <ccameron@chromium.org>
Reviewed-by: Fredrik Hubinette <hubbe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492255}
Former-commit-id: f63bfb074ca169a59f112522dffb4a5fd7ff1a9a